# doc-classifier

./: .coveragerc  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  GUIDELINES.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  skip_mypy.sh
.github/workflows/: ci.yml  deploy.yml
datasets/: model.pkl
docs/: distilbert_model.md  frontend_setup.md  limitations.md  prometheus.yml
files/: bank_statement_cb1ec9cf.csv  bank_statement_de915e6e.csv  bank_statement_de9ab9ae.csv  form_cb775b0e.txt  form_d18644b3.txt  form_f55537f8.txt  sample_financial_report.docx
scripts/: compare_models.py  generate_api_key.py  generate_synthetic.py  lint.sh  test_async_job.py  test_get_endpoints.py  test_post_files.py  train_distilbert_model.py  train_model.py
src/: __init__.py  app.py  classifier.py  main.py
src/api/: __init__.py  app.py  auth.py  errors.py  schemas.py
src/api/routes/: __init__.py  admin.py  files.py  jobs.py
src/classification/: __init__.py  confidence.py  model.py  pipeline.py  types.py
src/classification/stages/: __init__.py  filename.py  metadata.py  ocr.py  text.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  logging_config.py
src/ingestion/: streamers.py  validators.py
src/parsing/: __init__.py  csv.py  docx.py  image.py  pdf.py  registry.py  txt.py
src/services/: classification_service.py
src/utils/: auth.py
tests/: conftest.py  test_app.py
tests/integration/: __init__.py
tests/integration/api/: test_admin.py  test_app_errors.py  (+3 more)
(+20 files in other folders)
