[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heronai-doc-classifier"
version = "0.1.0"
description = "HeronAI scalable document classifier demo"
authors = [{name = "HeronAI Engineering", email = "engineering@heron.ai"}]
requires-python = ">=3.11"

# Formatting – Black
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

# Linting – Ruff
[tool.ruff]
line-length = 88
target-version = "py311"

# Paths to ignore entirely
exclude = [
    "tests", # skip all test modules from linting
    "tests/data",
    "datasets",
]

[tool.ruff.lint]
# Enable common rule sets: pyflakes (F), pycodestyle (E/W), isort (I),
# bugbear (B).  E501 (line-length) ignored because Black already governs it.
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

# Static typing – mypy
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
show_error_codes = true
ignore_missing_imports = true
exclude = '''
(?x)(
    tests/|
    datasets
)
'''
